// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepGeneralFeature should submit a form with a git repository 1`] = `
<body>
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-white pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <section
            class="flex flex-col"
          >
            <h1
              class="text-neutral-400 text-xl font-bold mb-2"
            >
              General information
            </h1>
            <p
              class="mb-10 text-sm text-neutral-350"
            >
              These general settings allow you to set up the service name, its source and deployment parameters.
            </p>
            <form
              class="space-y-10"
            >
              <section
                class="flex flex-col gap-4"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  General
                </h2>
                <div
                  class="flex items-center gap-4"
                >
                  <button
                    aria-controls="radix-:rk:"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    class="relative rounded-full transition hover:bg-neutral-100"
                    data-state="closed"
                    type="button"
                  >
                    <span
                      class="flex items-center justify-center h-16 w-16 min-h-16 min-w-16 rounded-full border border-neutral-200"
                    >
                      <span
                        class="flex items-center justify-center rounded-full h-10 w-10"
                      >
                        <svg
                          class="shrink-0 "
                          fill="none"
                          height="100%"
                          name="TERRAFORM"
                          viewBox="0 0 11 12"
                          width="100%"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.28 4.01v3.786l3.28-1.892v-3.79L7.28 4.01zM3.64 2.114L6.92 4.01v3.786L3.64 5.902V2.114zM0 0v3.788l3.28 1.894V1.894L0 0zm3.64 10.106L6.92 12V8.212L3.64 6.318v3.788z"
                            fill="#7B42BC"
                          />
                        </svg>
                      </span>
                    </span>
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-angle-down absolute bottom-0 right-0 rounded-full bg-white p-0.5 text-neutral-300"
                    />
                  </button>
                  <div
                    class="grow"
                  >
                    <div
                      class=""
                      data-testid="input-text-wrapper"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          aria-label="input-container"
                          class="input    input--label-up "
                        >
                          <div
                            class=""
                          >
                            <label
                              class="translate-y-2 text-sm"
                              for="Service name"
                            >
                              Service name
                            </label>
                            <input
                              class="input__value "
                              data-testid="input-text"
                              id="Service name"
                              name="name"
                              type="text"
                              value="my-helm-app"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="input-textarea"
                >
                  <div
                    aria-label="textarea-container"
                    class="input pb-0 pr-2    "
                  >
                    <label
                      class="translate-y-2 text-sm"
                      for="Description (optional)"
                    >
                      Description (optional)
                    </label>
                    <textarea
                      class="mt-5 min-h-[52px] w-full appearance-none bg-transparent pr-3 text-sm text-neutral-400 outline-0"
                      id="Description (optional)"
                      name="description"
                    />
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col gap-4"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Source
                </h2>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select  !bg-neutral-100 !border-neutral-250 !pointer-events-none !border-neutral-250 !bg-neutral-100 "
                      data-testid="select"
                    >
                      <label
                        class="!translate-y-0 !text-xs"
                        for="Terraform source"
                      >
                        Terraform source
                      </label>
                      <div
                        class="input-select--is-disabled css-3iigni-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-4-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control input-select__control--is-disabled css-16xfy0z-control"
                        >
                          <div
                            class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <span
                              class="mr-1 text-sm text-neutral-400"
                            >
                              Git provider
                            </span>
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-mohuvp-dummyInput-DummyInput"
                              disabled=""
                              id="Terraform source"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-894a34-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <input
                        name="Terraform source"
                        type="hidden"
                        value="GIT"
                      />
                      <div
                        class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select    "
                      data-testid="select"
                    >
                      <label
                        class="top-1.5 translate-y-2 text-sm"
                        for="Git account"
                      >
                        Git account
                      </label>
                      <div
                        class=" css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-5-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control css-13cymwt-control"
                        >
                          <div
                            class="input-select__value-container css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="input-select__placeholder css-1jqq78o-placeholder"
                              id="react-select-5-placeholder"
                            >
                              Select...
                            </div>
                            <div
                              class="input-select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-describedby="react-select-5-placeholder"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="input-select__input"
                                id="Git account"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="Git account"
                          type="hidden"
                          value=""
                        />
                      </div>
                      <input
                        name="Git account"
                        type="hidden"
                        value=""
                      />
                      <div
                        class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-center"
                  >
                    <div
                      class="aspect-square border-2  rounded-full border-solid border-r-neutral-500 animate-spin w-4 "
                      data-testid="spinner"
                    />
                  </div>
                  <div
                    class="flex justify-center"
                  >
                    <div
                      class="aspect-square border-2  rounded-full border-solid border-r-neutral-500 animate-spin w-4 "
                      data-testid="spinner"
                    />
                  </div>
                </div>
              </section>
              <div
                class="flex justify-between"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
                  disabled=""
                  type="submit"
                >
                  Continue
                </button>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`StepGeneralFeature should submit a form with a helm repository and match snapshots 1`] = `
<body>
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-white pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <section
            class="flex flex-col"
          >
            <h1
              class="text-neutral-400 text-xl font-bold mb-2"
            >
              General information
            </h1>
            <p
              class="mb-10 text-sm text-neutral-350"
            >
              These general settings allow you to set up the service name, its source and deployment parameters.
            </p>
            <form
              class="space-y-10"
            >
              <section
                class="flex flex-col gap-4"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  General
                </h2>
                <div
                  class="flex items-center gap-4"
                >
                  <button
                    aria-controls="radix-:rd:"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    class="relative rounded-full transition hover:bg-neutral-100"
                    data-state="closed"
                    type="button"
                  >
                    <span
                      class="flex items-center justify-center h-16 w-16 min-h-16 min-w-16 rounded-full border border-neutral-200"
                    >
                      <span
                        class="flex items-center justify-center rounded-full h-10 w-10"
                      >
                        <svg
                          class="shrink-0 "
                          fill="none"
                          height="100%"
                          name="TERRAFORM"
                          viewBox="0 0 11 12"
                          width="100%"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.28 4.01v3.786l3.28-1.892v-3.79L7.28 4.01zM3.64 2.114L6.92 4.01v3.786L3.64 5.902V2.114zM0 0v3.788l3.28 1.894V1.894L0 0zm3.64 10.106L6.92 12V8.212L3.64 6.318v3.788z"
                            fill="#7B42BC"
                          />
                        </svg>
                      </span>
                    </span>
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-angle-down absolute bottom-0 right-0 rounded-full bg-white p-0.5 text-neutral-300"
                    />
                  </button>
                  <div
                    class="grow"
                  >
                    <div
                      class=""
                      data-testid="input-text-wrapper"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          aria-label="input-container"
                          class="input    input--label-up "
                        >
                          <div
                            class=""
                          >
                            <label
                              class="translate-y-2 text-sm"
                              for="Service name"
                            >
                              Service name
                            </label>
                            <input
                              class="input__value "
                              data-testid="input-text"
                              id="Service name"
                              name="name"
                              type="text"
                              value="my-helm-app"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="input-textarea"
                >
                  <div
                    aria-label="textarea-container"
                    class="input pb-0 pr-2    input--label-up"
                  >
                    <label
                      class="translate-y-2 text-sm"
                      for="Description (optional)"
                    >
                      Description (optional)
                    </label>
                    <textarea
                      class="mt-5 min-h-[52px] w-full appearance-none bg-transparent pr-3 text-sm text-neutral-400 outline-0"
                      id="Description (optional)"
                      name="description"
                    >
                      description
                    </textarea>
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col gap-4"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Source
                </h2>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select  !bg-neutral-100 !border-neutral-250 !pointer-events-none !border-neutral-250 !bg-neutral-100 "
                      data-testid="select"
                    >
                      <label
                        class="top-1.5 translate-y-2 text-sm"
                        for="Terraform source"
                      >
                        Terraform source
                      </label>
                      <div
                        class="input-select--is-disabled css-3iigni-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-3-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control input-select__control--is-disabled css-16xfy0z-control"
                        >
                          <div
                            class="input-select__value-container css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="input-select__placeholder css-1jqq78o-placeholder"
                              id="react-select-3-placeholder"
                            >
                              Select...
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-3-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-mohuvp-dummyInput-DummyInput"
                              disabled=""
                              id="Terraform source"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-894a34-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <input
                        name="Terraform source"
                        type="hidden"
                        value=""
                      />
                      <div
                        class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="flex justify-between"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
                  disabled=""
                  type="submit"
                >
                  Continue
                </button>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`StepGeneralFeature should submit a form with a public git repository 1`] = `
<body>
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-white pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <section
            class="flex flex-col"
          >
            <h1
              class="text-neutral-400 text-xl font-bold mb-2"
            >
              General information
            </h1>
            <p
              class="mb-10 text-sm text-neutral-350"
            >
              These general settings allow you to set up the service name, its source and deployment parameters.
            </p>
            <form
              class="space-y-10"
            >
              <section
                class="flex flex-col gap-4"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  General
                </h2>
                <div
                  class="flex items-center gap-4"
                >
                  <button
                    aria-controls="radix-:rr:"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    class="relative rounded-full transition hover:bg-neutral-100"
                    data-state="closed"
                    type="button"
                  >
                    <span
                      class="flex items-center justify-center h-16 w-16 min-h-16 min-w-16 rounded-full border border-neutral-200"
                    >
                      <span
                        class="flex items-center justify-center rounded-full h-10 w-10"
                      >
                        <svg
                          class="shrink-0 "
                          fill="none"
                          height="100%"
                          name="TERRAFORM"
                          viewBox="0 0 11 12"
                          width="100%"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.28 4.01v3.786l3.28-1.892v-3.79L7.28 4.01zM3.64 2.114L6.92 4.01v3.786L3.64 5.902V2.114zM0 0v3.788l3.28 1.894V1.894L0 0zm3.64 10.106L6.92 12V8.212L3.64 6.318v3.788z"
                            fill="#7B42BC"
                          />
                        </svg>
                      </span>
                    </span>
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-angle-down absolute bottom-0 right-0 rounded-full bg-white p-0.5 text-neutral-300"
                    />
                  </button>
                  <div
                    class="grow"
                  >
                    <div
                      class=""
                      data-testid="input-text-wrapper"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          aria-label="input-container"
                          class="input    input--label-up "
                        >
                          <div
                            class=""
                          >
                            <label
                              class="translate-y-2 text-sm"
                              for="Service name"
                            >
                              Service name
                            </label>
                            <input
                              class="input__value "
                              data-testid="input-text"
                              id="Service name"
                              name="name"
                              type="text"
                              value="my-helm-app"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="input-textarea"
                >
                  <div
                    aria-label="textarea-container"
                    class="input pb-0 pr-2    "
                  >
                    <label
                      class="translate-y-2 text-sm"
                      for="Description (optional)"
                    >
                      Description (optional)
                    </label>
                    <textarea
                      class="mt-5 min-h-[52px] w-full appearance-none bg-transparent pr-3 text-sm text-neutral-400 outline-0"
                      id="Description (optional)"
                      name="description"
                    />
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col gap-4"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Source
                </h2>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select  !bg-neutral-100 !border-neutral-250 !pointer-events-none !border-neutral-250 !bg-neutral-100 "
                      data-testid="select"
                    >
                      <label
                        class="!translate-y-0 !text-xs"
                        for="Terraform source"
                      >
                        Terraform source
                      </label>
                      <div
                        class="input-select--is-disabled css-3iigni-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-6-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control input-select__control--is-disabled css-16xfy0z-control"
                        >
                          <div
                            class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <span
                              class="mr-1 text-sm text-neutral-400"
                            >
                              Git provider
                            </span>
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-mohuvp-dummyInput-DummyInput"
                              disabled=""
                              id="Terraform source"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-894a34-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <input
                        name="Terraform source"
                        type="hidden"
                        value="GIT"
                      />
                      <div
                        class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select input--has-icon   "
                      data-testid="select"
                    >
                      <div
                        class="absolute left-0 top-0 flex h-full w-12 items-center justify-center"
                        data-testid="selected-icon"
                      >
                        <i
                          aria-hidden="true"
                          class="fa-regular fa-folder-closed "
                          height="16"
                          width="16"
                        />
                      </div>
                      <label
                        class="!translate-y-0 !text-xs ml-8"
                        for="Git account"
                      >
                        Git account
                      </label>
                      <div
                        class=" css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-7-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control css-13cymwt-control"
                        >
                          <div
                            class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <span
                              class="mr-1 text-sm text-neutral-400"
                            >
                              Public repository (Github, Gitlab, Bitbucket)
                            </span>
                            <div
                              class="input-select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="input-select__input"
                                id="Git account"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="Git account"
                          type="hidden"
                          value="PUBLIC"
                        />
                      </div>
                      <input
                        name="Git account"
                        type="hidden"
                        value="PUBLIC"
                      />
                      <div
                        class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class=""
                      data-testid="input-text-wrapper"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          aria-label="input-container"
                          class="input    input--label-up "
                        >
                          <div
                            class=""
                          >
                            <label
                              class="translate-y-2 text-sm"
                              for="Public repository URL (.git)"
                            >
                              Public repository URL (.git)
                            </label>
                            <input
                              class="input__value "
                              data-testid="input-text"
                              id="Public repository URL (.git)"
                              name="repository"
                              type="text"
                              value="https://github.com/Qovery/console.git"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                    data-testid="input-text-wrapper"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        aria-label="input-container"
                        class="input    input--label-up "
                      >
                        <div
                          class=""
                        >
                          <label
                            class="translate-y-2 text-sm"
                            for="Branch"
                          >
                            Branch
                          </label>
                          <input
                            class="input__value "
                            data-testid="input-text"
                            id="Branch"
                            name="branch"
                            type="text"
                            value="main"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class=""
                      data-testid="input-text-wrapper"
                    >
                      <div
                        class="relative"
                      >
                        <div
                          aria-label="input-container"
                          class="input    input--label-up "
                        >
                          <div
                            class=""
                          >
                            <label
                              class="translate-y-2 text-sm"
                              for="Manifest folder path"
                            >
                              Manifest folder path
                            </label>
                            <input
                              class="input__value "
                              data-testid="input-text"
                              id="Manifest folder path"
                              name="root_path"
                              type="text"
                              value="/"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <p
                      class="ml-4 mt-1 text-xs text-neutral-350"
                    >
                      Provide the folder path in the repository where the manifest  is located.
                    </p>
                  </div>
                  <div
                    class="flex flex-row gap-x-3 p-3 border rounded text-sm border-sky-500 bg-sky-50 text-sky-500 items-center"
                    data-accent-color="sky"
                  >
                    <div
                      class="-order-2 text-lg leading-6"
                    >
                      <i
                        aria-hidden="true"
                        class="fa-regular fa-info-circle "
                      />
                    </div>
                    <div
                      class="-order-1 mr-auto gap-x-3 text-neutral-400"
                    >
                      Git automations are disabled when using public repos (auto-deploy, automatic preview environments)
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="flex justify-between"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
                  disabled=""
                  type="submit"
                >
                  Continue
                </button>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
</body>
`;
